[Fix]インデント修正

--- a/app/views/admin/souvenirs/index.html.erb
+++ b/app/views/admin/souvenirs/index.html.erb
@@ -15,6 +15,7 @@
             <th>県名</th>
             <th></th>
             <th></th>
+            <th></th>
           </tr>
         </thead>
         <% @souvenirs.each do |souvenir| %>
@@ -25,7 +26,8 @@
                 <td class="align-middle"><%= souvenir.souvenir_name %></td>
                 <td class="align-middle"><%= souvenir.prefecture.prefecture_name %></td>
                 <td></td>
-                <td class="text-center"><%= link_to "詳細", admin_souvenir_path(souvenir), class: "btn btn-outline-info" %></td>
+                <td class="text-center"><%= link_to "詳細", admin_souvenir_path(souvenir), class: "btn btn-outline-primary", data: {"turbolinks" => false}%></td>
+                <td class="text-center"><%= link_to "レビュー", admin_souvenir_reviews_path(souvenir), class: "btn btn-outline-info" %></td>
               </tr>
             </tbody>
           <% end %>
