--- a/app/views/public/souvenirs/new.html.erb
+++ b/app/views/public/souvenirs/new.html.erb
@@ -6,7 +6,7 @@
 
     <div class="col-8 offset-1 pt-5">
       <h2 class="text-center">ミヤゲ新規登録</h2>
-      <div class="text-right">
+      <div class="text-right m-3">
         <%= link_to "戻る", souvenirs_path, class: "btn btn-outline-secondary" %>
       </div>
 
@@ -58,5 +58,6 @@
         </div>
       <% end %>
     </div>
+
   </div>
 </div>
