--- a/app/views/public/souvenirs/reviews.html.erb
+++ b/app/views/public/souvenirs/reviews.html.erb
@@ -7,14 +7,14 @@
     <div class="col-8 offset-1 mb-3">
       <h2 class="text-center m-5">レビュー一覧</h2>
       <p class="text-right mr-5">全 <%= @reviews.count %> 件</p>
-      <div class ="m-2 text-right">
+      <div class ="m-2 mb-3 text-right">
         <%= link_to "戻る", root_path, class: "btn btn-outline-secondary" %>
       </div>
 
       <div class="col-12 mx-auto">
        <%= render "public/homes/search_review", reviews: @reviews %>
       </div>
-
     </div>
+
   </div>
 </div>
