--- a/app/views/public/souvenirs/show.html.erb
+++ b/app/views/public/souvenirs/show.html.erb
@@ -7,134 +7,135 @@
     <div class="col-8 offset-1 pt-5">
       <h2 class="text-center"><%= @souvenir.souvenir_name %>の詳細</h2>
       <div class="m-3">
-        <div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center ">
           <% if user_signed_in? %>
             <%= link_to "レビューする",  new_souvenir_review_path(@souvenir), class: "btn btn-outline-success mr-5" %>
             <div id="want_btn_<%= @souvenir.id %>">
               <%= render "want", souvenir: @souvenir %></div>
             </div>
           <% end %>
-          <%= link_to "戻る", souvenirs_path, class: "btn btn-outline-secondary float-right", data: {"turbolinks" => false} %>
-      </div>
-      <div class="row mt-5">
-        <div class="col-4">
-          <% if @souvenir.rakuten_image_url.present? %>
-            <img src="<%= @souvenir.rakuten_image_url %>", class="card-img-top width='30%' height='50%'">
-          <% else %>
-            <%= image_tag @souvenir.get_image.variant( resize: "250x250")  %>
-          <% end %>
-          <br>
-          <% if @souvenir.rakuten_url.present? %>
-            <a href="<%= @souvenir.rakuten_url %>">楽天の商品ページへ</a>
-          <% end %>
+          <%= link_to "戻る", souvenirs_path, class: "btn btn-outline-secondary float-right my-2", data: {"turbolinks" => false} %>
         </div>
-        <div class="col-8">
-          <table class="table table-border">
-            <tbody>
-              <tr>
-                <td class="col-3 text-center align-middle">ミヤゲ名</td>
-                <td><%= @souvenir.souvenir_name %></td>
-              </tr>
-              <tr>
-                <td class="col-3 text-center align-middle">県名</td>
-                <td>
-                  <% if @souvenir.prefecture.present? %>
-                    <%= @souvenir.prefecture.prefecture_name %>
-                  <% else %>
-                    登録されていない都道府県
-                  <% end %>
-                </td>
-              </tr>
-              <tr>
-                <td class="col-3 text-center align-middle">紹介文</td>
-                <td><%= safe_join(@souvenir.introduction.split("\n"),tag(:br)) %></td>
-                <!--↑ viewに表示する際に、改行を反映させる記述　-->
-              </tr>
-              <tr>
-                <td class="col-3 text-center align-middle">カテゴリー</td>
-                <td><%= @souvenir.category_i18n %></td>
-              </tr>
-              <tr>
-                <td class="col-3 text-center align-middle">ほしい！</td>
-                <td>
-                  <div id="want_btn_count<%= @souvenir.id %>">
-                    <%= render "wants_count", souvenir: @souvenir %></div>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <td class="col-3 text-center align-middle">タグ</td>
-                <td class="d-flex flex-wrap">
-                  <% uniq_tags = Array.new %>
-                  <% @souvenir.reviews.each do |review| %>
-                    <% review.tags.each do |tag| %>
-                    <% unless uniq_tags.include?(tag) %>
-                    <% uniq_tags.push(tag) %>
-                      <%= link_to search_tags_path(tag_name: tag.tag_name) do %>
-                      <span class="badge badge-primary text-light mr-2 mb-2">
-                        <%= tag.tag_name %>
-                      </span>
-                      <% end %>
+        <div class="row mt-5">
+          <div class="col-4 mt-3">
+            <% if @souvenir.rakuten_image_url.present? %>
+              <img src="<%= @souvenir.rakuten_image_url %>", class="card-img-top width='30%' height='50%'">
+            <% else %>
+              <%= image_tag @souvenir.get_image.variant( resize: "250x250")  %>
+            <% end %>
+            <br>
+            <% if @souvenir.rakuten_url.present? %>
+              <a href="<%= @souvenir.rakuten_url %>">楽天の商品ページへ</a>
+            <% end %>
+          </div>
+          <div class="col-8 mt-3">
+            <table class="table table-border">
+              <tbody>
+                <tr>
+                  <td class="col-3 text-center align-middle">ミヤゲ名</td>
+                  <td><%= @souvenir.souvenir_name %></td>
+                </tr>
+                <tr>
+                  <td class="col-3 text-center align-middle">県名</td>
+                  <td>
+                    <% if @souvenir.prefecture.present? %>
+                      <%= @souvenir.prefecture.prefecture_name %>
+                    <% else %>
+                      登録されていない都道府県
+                    <% end %>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="col-3 text-center align-middle">紹介文</td>
+                  <td><%= safe_join(@souvenir.introduction.split("\n"),tag(:br)) %></td>
+                        <!--↑ viewに表示する際に、改行を反映させる記述　-->
+                </tr>
+                <tr>
+                  <td class="col-3 text-center align-middle">カテゴリー</td>
+                  <td><%= @souvenir.category_i18n %></td>
+                </tr>
+                <tr>
+                  <td class="col-3 text-center align-middle">ほしい！</td>
+                  <td>
+                    <div id="want_btn_count<%= @souvenir.id %>">
+                      <%= render "wants_count", souvenir: @souvenir %></div>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="col-3 text-center align-middle">タグ</td>
+                  <td class="d-flex flex-wrap">
+                    <% uniq_tags = Array.new %>
+                    <% @souvenir.reviews.each do |review| %>
+                      <% review.tags.each do |tag| %>
+                        <% unless uniq_tags.include?(tag) %>
+                          <% uniq_tags.push(tag) %>
+                          <%= link_to search_tags_path(tag_name: tag.tag_name) do %>
+                            <span class="badge badge-primary text-light mr-2 mb-2 p-2">
+                              <%= tag.tag_name %>
+                            </span>
+                          <% end %>
+                        <% end %>
                       <% end %>
                     <% end %>
-                  <% end %>
-                </td>
-              </tr>
-              </tr>
-              <tr>
-                <td class="col-3 text-center align-middle">平均評価</td>
-                <td><%= render "average_star", souvenir: @souvenir %></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-
-       <div class="text-right m-3">
-        レビュー：全 <%= @souvenir.reviews.count %>件
-      </div>
-
-      <% @souvenir.reviews.each do |review| %>
-        <% if @souvenir.present? %>
-          <%= link_to souvenir_review_path(@souvenir, review), data: {"turbolinks" => false} do %>
-            <div class="card border-secondary btn btn-outline-secondary text-left mb-3">
-              <table class="table-borderless">
-                <tr>
-                  <th class="col-3 text-center align-middle mb-2">
-                    <h5 class="py-2 bg-secondary text-white">
-                      <% if review.user.is_deleted == false %>
-                        <%= review.user.nickname %> さん
-                      <% else review.user.is_deleted == true %>
-                        退会済みユーザー
-                      <% end %>
-                    </h5>
-                  </th>
-                  <td class="col-2 text-center align-middle mb-2">
-                    <h5 class="font-weight-bolder">在住県：&ensp;<%= review.user.residence_prefecture %></h5>
                   </td>
-                  <td class="col-2 text-center align-middle mb-2"><h6><%= review.created_at.strftime('%Y年%m月%d日') %></h6></td>
                 </tr>
                 <tr>
-                  <th class="card-subtitle text-center p-2">貰った？贈った？</th>
-                  <td colspan="2", class="align-middle"><%= review.receive_send %></td>
+                  <td class="col-3 text-center align-middle">平均評価</td>
+                  <td><%= render "average_star", souvenir: @souvenir %></td>
                 </tr>
-                <tr>
-                  <th class="card-subtitle text-center p-2">誰に？</th>
-                  <td colspan="2",class="align-middle"> <%= review.people_i18n %></td>
-                </tr>
-                <tr>
-                  <th class="card-subtitle text-center p-2">用途は？</th>
-                  <td colspan="2",class="align-middle"><%= review.usefulness_i18n %></td>
-                </tr>
-                <tr>
-                  <th class="card-subtitle text-center p-2">レビュー</th>
-                  <td colspan="2",class="align-middle"><%= safe_join(review.review.split("\n"),tag(:br)) %></p></td>
-                </tr>
-              </table>
-            </div>
+              </tbody>
+            </table>
+          </div>
+        </div>
+
+        <div class="text-right m-3">
+          レビュー：全 <%= @souvenir.reviews.count %>件
+        </div>
+
+        <% @souvenir.reviews.each do |review| %>
+          <% if @souvenir.present? %>
+            <%= link_to souvenir_review_path(@souvenir, review), data: {"turbolinks" => false} do %>
+              <div class="card border-secondary btn btn-outline-secondary text-left mb-3">
+                <table class="table-borderless">
+                  <tr>
+                    <th class="col-3 text-center align-middle mb-2">
+                      <h5 class="py-2 bg-secondary text-white">
+                        <% if review.user.is_deleted == false %>
+                          <%= review.user.nickname %> さん
+                        <% else review.user.is_deleted == true %>
+                          退会済みユーザー
+                        <% end %>
+                      </h5>
+                    </th>
+                    <td class="col-2 text-center align-middle mb-2">
+                      <h5 class="font-weight-bolder">在住県：&ensp;<%= review.user.residence_prefecture %></h5>
+                    </td>
+                    <td class="col-2 text-center align-middle mb-2"><h6><%= review.created_at.strftime('%Y年%m月%d日') %></h6></td>
+                  </tr>
+                  <tr>
+                    <th class="card-subtitle text-center p-2">貰った？贈った？</th>
+                    <td colspan="2", class="align-middle"><%= review.receive_send %></td>
+                  </tr>
+                  <tr>
+                    <th class="card-subtitle text-center p-2">誰に？</th>
+                    <td colspan="2",class="align-middle"> <%= review.people_i18n %></td>
+                  </tr>
+                  <tr>
+                    <th class="card-subtitle text-center p-2">用途は？</th>
+                    <td colspan="2",class="align-middle"><%= review.usefulness_i18n %></td>
+                  </tr>
+                  <tr>
+                    <th class="card-subtitle text-center p-2">レビュー</th>
+                    <td colspan="2",class="align-middle"><%= safe_join(review.review.split("\n"),tag(:br)) %></p></td>
+                  </tr>
+                </table>
+              </div>
+            <% end %>
           <% end %>
         <% end %>
-      <% end %>
+      </div>
     </div>
+
   </div>
 </div>
