--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -5,7 +5,7 @@
     </div>
 
     <div class="col-5 offset-1 pt-5">
-      <h1>マイページ</h1>
+      <h1 class="mb-5">マイページ</h1>
       <table class="table">
         <tbody>
           <tr>
@@ -28,12 +28,13 @@
       </table>
     </div>
 
-    <div class="col-3 pt-5">
+    <div class="col-3 mb-5 pt-5">
       <% unless @user.guest_user? %>
-        <%= link_to "編集する", user_edit_path, class: "btn btn-outline-success mt-4 mb-5" %>
+        <%= link_to "編集する", user_edit_path, class: "btn btn-outline-success mt-5 mb-5" %>
       <% end %>
       <%= link_to "自分のレビュー一覧", user_review_path, class: "btn btn-outline-primary mb-5" %>
       <%= link_to "自分のほしい！一覧", user_want_path, class: "btn btn-outline-warning mb-5" %>
     </div>
+
   </div>
 </div>
