--- a/app/views/rakuten/index.html.erb
+++ b/app/views/rakuten/index.html.erb
@@ -6,9 +6,7 @@
 
     <div class="col-9 pt-5">
       <h2 class="text-center">楽天市場の商品を検索</h2>
-
       <% if admin_signed_in? %>
-
         <div class="col-12 m-3 text-right">
           <%= link_to "戻る", new_admin_souvenir_path, class: "btn btn-outline-secondary" %>
         </div>
@@ -24,11 +22,11 @@
               <table class="table", style="table-layout:fixed;">
                 <thead>
                   <tr>
-                    <th style="width: 10%", class="text-center"></th>
-                    <th style="width: 40%", class="text-center">商品名</th>
-                    <th style="width: 15%", class="text-center">価格</th>
-                    <th style="width: 15%", class="text-center">画像</th>
-                    <th style="width: 25%", class="text-center">URL</th>
+                    <th class="text-center col-2"></th>
+                    <th class="text-center col-3">商品名</th>
+                    <th class="text-center col-2">価格</th>
+                    <th class="text-center col-2">画像</th>
+                    <th class="text-center col-3">URL</th>
                   </tr>
                 </thead>
                 <% @items.each do |item| %>
@@ -40,7 +38,7 @@
                     <td class="align-middle"><%= item.params["itemName"] %></td>
                     <td class="align-middle text-center"><%= item.params["itemPrice"] %>円</td>
                     <td class="align-middle"><% if item.params["mediumImageUrls"].present? %>
-                                              <%= image_tag item.params["mediumImageUrls"][0], size: "100x100" %>
+                                                <%= image_tag item.params["mediumImageUrls"][0], size: "100x100" %>
                                             <% end %>
                     </td>
                     <td class="align-middle"><a href="<%= item.params['itemUrl'] %>"><%= item.params['itemUrl'] %></a></td>
@@ -53,9 +51,7 @@
             <% end %>
           </div>
         </div>
-
       <% elsif user_signed_in? %>
-
         <div class="col-10 m-3 text-right">
           <%= link_to "戻る", new_souvenir_path, class: "btn btn-outline-secondary" %>
         </div>
@@ -71,11 +67,11 @@
               <table class="table", style="table-layout:fixed;">
                 <thead>
                   <tr>
-                    <th style="width: 10%", class="text-center"></th>
-                    <th style="width: 40%", class="text-center">商品名</th>
-                    <th style="width: 15%", class="text-center">価格</th>
-                    <th style="width: 15%", class="text-center">画像</th>
-                    <th style="width: 25%", class="text-center">URL</th>
+                    <th class="text-center col-2"></th>
+                    <th class="text-center col-3">商品名</th>
+                    <th class="text-center col-2">価格</th>
+                    <th class="text-center col-2">画像</th>
+                    <th class="text-center col-3">URL</th>
                   </tr>
                 </thead>
                 <% @items.each do |item| %>
@@ -87,7 +83,7 @@
                     <td class="align-middle"><%= item.params["itemName"] %></td>
                     <td class="align-middle text-center"><%= item.params["itemPrice"] %>円</td>
                     <td class="align-middle"><% if item.params["mediumImageUrls"].present? %>
-                                            　<%= image_tag item.params["mediumImageUrls"][0], size: "100x100" %>
+                                              　<%= image_tag item.params["mediumImageUrls"][0], size: "100x100" %>
                                           　<% end %>
                     </td>
                     <td class="align-middle"><a href="<%= item.params['itemUrl'] %>"><%= item.params['itemUrl'] %></a></td>
@@ -104,6 +100,7 @@
         <h2 class="text-center mt-5">ログインしてください。</h2>
       <% end %>
     </div>
+
   </div>
 </div>
 
