[Fix]テスト後修正

--- a/app/views/admin/reviews/show.html.erb
+++ b/app/views/admin/reviews/show.html.erb
@@ -24,7 +24,7 @@
               <td></td>
             </tr>
             <tr>
-              <th class="text-center align-middle">レビュー</th>
+              <th class="text-center align-middle">レビュー&emsp;<span class="badge badge-danger">必須</span></th>
               <td><%= f.text_area :review, autofocus: true, class: "form-control", rows: "4" %></td>
               <td></td>
             </tr>
