--- a/app/views/public/reviews/edit.html.erb
+++ b/app/views/public/reviews/edit.html.erb
@@ -14,7 +14,7 @@
         <table class="table m-3">
           <tbody>
             <tr>
-              <th class="text-center align-middle">レビュー</th>
+              <th class="text-center align-middle">レビュー&emsp;<span class="badge badge-danger">必須</span></th>
               <td class="col-7"><%= f.text_area :review, autofocus: true, class: "form-control", rows: "4" %></td>
               <td></td>
             </tr>
