--- a/app/views/admin/users/review.html.erb
+++ b/app/views/admin/users/review.html.erb
@@ -17,16 +17,18 @@
           </tr>
         </thead>
         <% @user.reviews.each do |review| %>
-        <tbody>
-          <tr>
-            <td class="align-middle"><%= review.created_at.to_s(:datetime_jp) %></td>
-            <td class="align-middle"><%= review.souvenir.souvenir_name %></td>
-            <td class="align-middle"><%= review.review.truncate(20) %></td>
-            <!------------------------".truncate(20)" は、文字列を20文字だけ表示する------------------>
-            <td class="align-middle"><%= link_to "詳細", admin_souvenir_review_path(review.souvenir, review), class: "btn btn-outline-info" %></td>
-            <td class="align-middle"><%= link_to "削除", admin_souvenir_review_path(review.souvenir, review), "data-confirm" => "削除してもよろしいですか？", method: :delete, class: "btn btn-outline-danger" %></td>
-          </tr>
-        </tbody>
+          <% if review.souvenir.present? %>
+          <tbody>
+            <tr>
+              <td class="align-middle"><%= review.created_at.to_s(:datetime_jp) %></td>
+              <td class="align-middle"><%= review.souvenir.souvenir_name %></td>
+              <td class="align-middle"><%= review.review.truncate(20) %></td>
+              <!------------------------".truncate(20)" は、文字列を20文字だけ表示する------------------>
+              <td class="align-middle"><%= link_to "詳細", admin_souvenir_review_path(review.souvenir, review), class: "btn btn-outline-info" %></td>
+              <td class="align-middle"><%= link_to "削除", admin_souvenir_review_path(review.souvenir, review), "data-confirm" => "削除してもよろしいですか？", method: :delete, class: "btn btn-outline-danger" %></td>
+            </tr>
+          </tbody>
+          <% end %>
         <% end %>
       </table>
     </div>
