--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -12,30 +12,30 @@
       <%= form_with model: @user, url: user_registration_path do |f| %>
         <%= render "public/shared/error_messages", resource: resource %>
         <div class="mb-2">
-          <%= f.label :名前 %><br />
+          <%= f.label :名前 %>&emsp;<span class="badge badge-danger">必須</span><br />
           <%= f.text_field :name, autofocus: true, placeholder: "群馬太郎", class: "form-control" %>
         </div>
         <div class="mb-2">
-          <%= f.label :表示名（ユーザー名） %><br />
+          <%= f.label :表示名（ユーザー名） %>&emsp;<span class="badge badge-danger">必須</span><br />
           <%= f.text_field :nickname, placeholder: "ぐんまちゃん", class: "form-control" %>
         </div>
         <div class="mb-2">
-          <%= f.label :在住県名 %><br />
+          <%= f.label :在住県名 %>&emsp;<span class="badge badge-danger">必須</span><br />
           <%= f.text_field :residence_prefecture, placeholder: "群馬県", class: "form-control" %>
         </div>
         <div class="mb-2">
-          <%= f.label :メールアドレス %><br />
+          <%= f.label :メールアドレス %>&emsp;<span class="badge badge-danger">必須</span><br />
           <%= f.email_field :email, autocomplete: "email", placeholder: "sample@example.com", class: "form-control" %>
         </div>
         <div class="mb-2">
-          <%= f.label :パスワード %>
+          <%= f.label :パスワード %>&emsp;<span class="badge badge-danger">必須</span>
           <% if @minimum_password_length %>
             (<%= @minimum_password_length %>文字以上 )
           <% end %><br />
           <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
         </div>
         <div class="mb-2">
-          <%= f.label :確認用パスワード %><br />
+          <%= f.label :確認用パスワード %>&emsp;<span class="badge badge-danger">必須</span><br />
           <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
         </div>
         <div class="text-center mt-3 mb-5">
